# http3-test

./: Cargo.toml
examples/static/: 3rdpartylicenses.txt  968.408538af8d5007f8.js  index.html  main.922b5a02294298f2.js  polyfills.eb4115c234884424.js  runtime.1cb108c68fce3ceb.js  styles.02223e99f635bb5c.css
migrations/2023-08-01-201528_create_users/: up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
