[package]
name = "vox_box_backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.19"
once_cell = "1.18.0"
rand = "0.8.5"
rust-argon2 = "1.0.0"
salvo = { version = "0.49", features = ["serve-static", "quinn"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
